chore: remove cspell

--- a/website/docs/en/guide/css.mdx
+++ b/website/docs/en/guide/css.mdx
@@ -72,14 +72,14 @@ E.g.: the following style files are considered CSS Modules:
 - `*.module.less`
 - `*.module.sass`
 - `*.module.scss`
-- `*.module.styl` {/*<!-- cspell:disable-line -->*/}
+- `*.module.styl`
 - `*.module.stylus`
 
 ### Recognition Rules
 
 By default, only files ending with `*.module.{css,scss,less}` are recognized as CSS Modules.
 
-If you want to treat other CSS files as CSS Modules as well, you can achieve this by configuring [output.cssModules.auto](../api/rspeedy.cssmodules.auto). {/* cspell:disable-line */}
+If you want to treat other CSS files as CSS Modules as well, you can achieve this by configuring [output.cssModules.auto](../api/rspeedy.cssmodules.auto).
 
 For example:
 
