--- a/website/docs/en/guide/css.mdx
+++ b/website/docs/en/guide/css.mdx
@@ -79,7 +79,7 @@ E.g.: the following style files are considered CSS Modules:
 
 By default, only files ending with `*.module.{css,scss,less}` are recognized as CSS Modules.
 
-If you want to treat other CSS files as CSS Modules as well, you can achieve this by configuring [output.cssModules.auto](../api/rspeedy.cssmodules.auto).
+If you want to treat other CSS files as CSS Modules as well, you can achieve this by configuring [output.cssModules.auto](/api/rspeedy.cssmodules.auto).
 
 For example:
 
