docs: integrate with twoslash

--- a/website/docs/zh/guide/installation.mdx
+++ b/website/docs/zh/guide/installation.mdx
@@ -27,7 +27,7 @@ import { PackageManagerTabs } from "@theme";
 
 接下来，将插件添加到配置文件中：
 
-```ts title=lynx.config.ts
+```ts title=lynx.config.ts twoslash
 import { defineConfig } from "@lynx-js/rspeedy";
 import { pluginReactLynx } from "@lynx-js/react-rsbuild-plugin";
 import { pluginTypeCheck } from "@rsbuild/plugin-type-check"; // [!code highlight]
