--- a/website/docs/en/guide/installation.mdx
+++ b/website/docs/en/guide/installation.mdx
@@ -30,7 +30,7 @@ Begin by installing the plugin using your preferred package management tool:
 
 Next, incorporate the plugin into your configuration file by adding it to the relevant section:
 
-```ts title=lynx.config.ts
+```ts title=lynx.config.ts twoslash
 import { defineConfig } from "@lynx-js/rspeedy";
 import { pluginReactLynx } from "@lynx-js/react-rsbuild-plugin";
 import { pluginTypeCheck } from "@rsbuild/plugin-type-check";  // [!code highlight]
